# time_calc

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
src/time_calc/: __main__.py  cli.py
tests/: test_cli.py
