[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "time-calc"
version = "0.1.0"
description = "Cross-platform shell time calculator."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "OpenAI Codex" }
]
license = { text = "MIT" }
keywords = ["time", "calculator", "cli", "shell"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities"
]

[project.scripts]
time_calc = "time_calc.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
